# cmocker

./: .travis.yml  AUTHORS  Makefile.in  README.md  config.h.in  configure  configure.ac  install-deps
include/: cmocker.h
src/: Makefile.am  Makefile.in  cmocker.c
tests/: Makefile.am  Makefile.in  check_cmocker.c
